--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: python
+python:
+  - "2.7"
+# command to install dependencies
+install: pip install . --use-mirrors
+# command to run tests
+script: nosetests
